--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,5 +8,7 @@ gogs_group: user
 
 gogs_url: https://dl.gogs.io/0.11.66/gogs_0.11.66_linux_amd64.tar.gz
 root_url: localhost
-root_url_port: 3000
+root_url_port: 80
 folder_install: /opt
+
+gogs_url_location: gogs/
